2012-10-08  Roland Levillain  <roland@lrde.epita.fr>

	Revive headers required by the RGB component functors.

	* mln/core/image/vmorph/thru_image.hh,
	* mln/fun/component/blue.hh,
	* mln/fun/component/green.hh,
	* mln/fun/component/red.hh,
	* mln/fun/component/rgb.hh,
	* mln/fun/param.hh,
	* mln/fun/spe/unary.hh,
	* mln/fun/unary.hh,
	* mln/trait/functions.hh,
	* mln/trait/next/solve.hh,
	* mln/trait/next/solve_binary.hh,
	* mln/trait/next/solve_proxy.hh,
	* mln/trait/next/solve_unary.hh:
	New.
	* headers.mk,
	* tests/unit_test/unit-tests.mk:
	Regen.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Provide typedefs mln::value::int_s24 and mln::value::int_u24.

	* mln/value/int_s24.hh,
	* mln/value/int_u24.hh:
	New.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Rename Trimesh reimplementations in apps/mesh-segm-skel/.

	* apps/mesh-segm-skel/trimesh/misc.hh: Move...
	* apps/mesh-segm-skel/misc.hh: ...here.
	Update comments.
	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv.cc:
	Adjust.
	* apps/mesh-segm-skel/trimesh/README: Remove.
	* apps/mesh-segm-skel/Makefile.am (noinst_HEADERS, EXTRA_DIST):
	Adjust.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Remove anything depending on the Trimesh library.

	* apps/mesh-segm-skel/io.hh,
	* apps/mesh-segm-skel/mesh-max-curv.cc,
	* apps/mesh-segm-skel/mesh-pinv-curv.cc,
	* apps/mesh-segm-skel/mesh-segm.cc,
	* apps/mesh-segm-skel/mesh-skel.cc,
	* apps/mesh-segm-skel/test-mesh-max-curv.in,
	* apps/mesh-segm-skel/test-mesh-segm.in:
	Remove.
	* apps/mesh-segm-skel/Makefile.am: Remove anything related to the
	Trimesh library.

2012-06-15  Roland Levillain  <roland@lrde.epita.fr>

	Remove dependencies on suppressed files.

	* doc/examples/tuto4_genericity_and_algorithms.cc: Do not include
	mln/extract/green.hh.

2012-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Fix the distcheck target.

	* tests/linear/Makefile.am (MOSTLYCLEANFILES):